--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,12 @@ spring:
   application:
     name: venta-service
 
+  cloud:
+    openfeign:
+      httpclient:
+        hc5:
+          enabled: true
+
   datasource:
     username: root
     password:
@@ -9,7 +15,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
 
     database-platform: org.hibernate.dialect.MySQLDialect
 
